...
            });
        };

        return (
            <ScrollView
                style={styles.container}
                testID="signup_screen"
                contentContainerStyle={{
                    alignItems: 'center',
                    width: GLOBAL.SCREEN_WIDTH,
                    backgroundColor: COLOR_DEEP_BLUE,
                    padding: 20,
                }}
...
                <Image
                    style={styles.tutIcon2}
                    source={require('./assets/loadinganimation.gif')}
                />

                <TextInput
                    testID="signup_username"
                    autoCapitalize="none"
                    autoCorrect={false}
                    placeholder={t('signup:chooseUsername')}
                    placeholderTextColor={COLOR_WHITE}
                    style={styles.textInput}
                    onChangeText={handleUserNameChange}
...
                    <Text style={styles.inputLabel}>
                        {t('signup:usernamePublic')}
                    </Text>
                )}

                <TextInput
                    testID="signup_email"
                    autoCapitalize="none"
                    autoCorrect={false}
                    autoComplete="email"
                    keyboardType="email-address"
                    placeholder={t('signup:enterYourEmail')}
                    placeholderTextColor={COLOR_WHITE}
...
                />
                <Text style={[styles.inputLabel, { color: COLOR_DEEP_BLUE }]}>
                    &nbsp;
                </Text>

                <TextInput
                    testID="signup_password"
                    autoCapitalize="none"
                    autoCorrect={false}
                    placeholder={t('signup:choosePassword')}
                    placeholderTextColor={COLOR_WHITE}
                    secureTextEntry
                    style={styles.textInput}
...

                <Text style={styles.legalText}>
                    {t('signup:contributionWarningOnSignup')}
                </Text>
                <Button
                    isDisabled={signupButtonDisabled}
                    testID="signup_button"
                    style={styles.otherButton}
                    onPress={this.handleSignUp}
                    textStyle={styles.buttonText}
                >
                    {t('signup:signUp')}
                </Button>
                <Button
                    testID="signup_to_login_button"
                    style={styles.switchToLogin}
                    onPress={() => this.switchScreens(SCREEN_LOGIN)}
                    textStyle={styles.buttonText}
                >
                    {t('signup:loginExistingAccount')}
                </Button>
...

    renderLoginScreen = () => {
        const { t } = this.props;
        const { email, password } = this.state;
        return (
            <ScrollView
                testID="login_screen"
                style={styles.container}
                contentContainerStyle={{
                    alignItems: 'center',
                    width: GLOBAL.SCREEN_WIDTH,
                    backgroundColor: COLOR_DEEP_BLUE,
                    padding: 20,
...
                <Image
                    style={styles.tutIcon2}
                    source={require('./assets/loadinganimation.gif')}
                />

                <TextInput
                    testID="login_email"
                    autoCapitalize="none"
                    autoCorrect={false}
                    autoComplete="email"
                    keyboardType="email-address"
                    placeholder={t('signup:enterYourEmail')}
                    placeholderTextColor={COLOR_WHITE}
...
                        this.setState({ email: text.replace(' ', '') })
                    }
                    value={email}
                />

                <TextInput
                    testID="login_password"
                    autoCapitalize="none"
                    autoCorrect={false}
                    placeholder={t('signup:enterYourPassword')}
                    placeholderTextColor={COLOR_WHITE}
                    secureTextEntry
                    style={[styles.textInput, { marginBottom: 30 }]}
...
                </Text>
                <Button
                    isDisabled={
                        email.length < MIN_EMAIL_LENGTH ||
                        password.length < MIN_PASSWORD_LENGTH
                    }
                    testID="login_button"
                    style={styles.otherButton}
                    onPress={this.handleLogin}
                    textStyle={styles.buttonText}
                >
                    {t('signup:login')}
                </Button>
                <Button
                    testID="login_to_password_button"
                    style={styles.switchToLogin}
                    onPress={() => this.switchScreens(SCREEN_FORGOT_PASSWORD)}
                    textStyle={styles.buttonText}
                >
                    {t('signup:forgotPassword')}
                </Button>
...

    renderForgotPasswordScreen = () => {
        const { email } = this.state;
        const { t } = this.props;
        return (
            <ScrollView
                testID="forgot_password_screen"
                style={styles.container}
                contentContainerStyle={{
                    alignItems: 'center',
                    width: GLOBAL.SCREEN_WIDTH,
                    backgroundColor: COLOR_DEEP_BLUE,
                    padding: 20,
...
