...
    const renderTile = useMemo(() => {
        return card?.map(tile => (
            <Tile
                closeTilePopup={closeTilePopup}
                key={tile.taskId}
                openTilePopup={openTilePopup}
                tile={tile}
                tutorial={tutorial}
                hideIcons={hideIcons}
                visibleAccessibility={visibleAccessibility}
            />
        ));
    }, [card, closeTilePopup, openTilePopup, tutorial, hideIcons]);

    return (
        <View
            style={styles.slide}
            {...panResponder.panHandlers}
            testID="individualCard"
        >
            {showSwipeHelp && renderSwipeHelp}
            {renderTile}
        </View>
    );
}
...
