...
            const maxTasks = parseInt(project.maxTasksPerUser, 10);
            // users can do more tasks than the limit, so we round up to 100% (ie: 1) max
            userProgress = Math.min(tasksCompleted / maxTasks, 1);
            userCanMap = tasksCompleted < maxTasks;
        }
        return (
            <ScrollView style={style.projectViewContainer} testID="projectView">
                <ImageBackground
                    style={style.backgroundImage}
                    source={{ uri: project.image }}
                >
                    <View style={style.overlay}>
                        <Text style={style.overlayProjectName}>
...
                    </Button>
                    <Button
                        style={style.startButton}
                        onPress={
                            userCanMap ? this.handlePress : this.returnToView
                        }
                        testID="mapNowButton"
                        textStyle={style.buttonText}
                    >
                        {userCanMap ? t('map now') : t('chooseAnotherProject')}
                    </Button>
                </View>
            </ScrollView>
...
