...
        <Modal backdropType="blur" position="center" isVisible={isVisible}>
            <View style={styles.modal}>
                {content}
                <Button
                    style={styles.startButton}
                    onPress={cancelButtonCallback}
                    testID="closeIntroModalBoxButton"
                    textStyle={{
                        fontSize: 13,
                        color: '#ffffff',
                        fontWeight: '700',
                    }}
                >
...
